--- a/templates/default/invoice/invoicecontents.html
+++ b/templates/default/invoice/invoicecontents.html
@@ -642,11 +642,13 @@
 
     function claculatePriceFromGross() {
         let grossPriceElemVal = grossPriceElem.val();
-        if (grossPriceElemVal.length) {
+        grossPriceElemVal = parseFloat(grossPriceElemVal.replace(/[\,]+/, '.'));
+
+        if (!isNaN(grossPriceElemVal)) {
             let selectedTaxId = $("#tax").find('option:selected').val();
             let tax = $('#tax' + selectedTaxId).val();
 
-            let grossPrice = financeDecimals.round(parseFloat(grossPriceElemVal.replace(/[\,]+/, '.')));
+            let grossPrice = financeDecimals.round(grossPriceElemVal);
             let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1));
 
             netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
@@ -656,16 +658,19 @@
             grossPriceElem.val(grossPrice);
         } else {
             netPriceElem.val('');
+            grossPriceElem.val('');
         }
     }
 
     function claculatePriceFromNet() {
         let netPriceElemVal = netPriceElem.val();
-        if (netPriceElemVal.length) {
+        netPriceElemVal = parseFloat(netPriceElemVal.replace(/[\,]+/, '.'))
+
+        if (!isNaN(netPriceElemVal)) {
             let selectedTaxId = $("#tax").find('option:selected').val();
             let tax = $('#tax' + selectedTaxId).val();
 
-            let netPrice = financeDecimals.round(parseFloat(netPriceElemVal.replace(/[\,]+/, '.')));
+            let netPrice = financeDecimals.round(netPriceElemVal);
             let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1));
 
             grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
@@ -675,6 +680,7 @@
             netPriceElem.val(netPrice);
         } else {
             grossPriceElem.val('');
+            netPriceElem.val('');
         }
     }
 
@@ -698,11 +704,13 @@
         let grossPriceElem = $(elem);
         let grossPriceElemVal = grossPriceElem.val();
         let netPriceElem = $('[name="invoice-contents[' + posuid + '][valuenetto]"]');
-        if (grossPriceElemVal.length) {
+        grossPriceElemVal = parseFloat(grossPriceElemVal.replace(/[\,]+/, '.'));
+
+        if (!isNaN(grossPriceElemVal)) {
             let selectedTaxId = $('#invoice-contents-field-tax-'+posuid).find('option:selected').val();
             let tax = $('#contents-tax-' + posuid + '-' + selectedTaxId).val();
 
-            let grossPrice = financeDecimals.round(parseFloat(grossPriceElemVal.replace(/[\,]+/, '.')));
+            let grossPrice = financeDecimals.round(grossPriceElemVal);
             let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1));
 
             netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
@@ -712,6 +720,7 @@
             grossPriceElem.val(grossPrice);
         } else {
             netPriceElem.val('');
+            grossPriceElem.val('');
         }
     }
 
@@ -719,11 +728,13 @@
         let netPriceElem = $(elem);
         let netPriceElemVal = netPriceElem.val();
         let grossPriceElem = $('[name="invoice-contents[' + posuid + '][valuebrutto]"]');
-        if (netPriceElemVal.length) {
+        netPriceElemVal = parseFloat(netPriceElemVal.replace(/[\,]+/, '.'))
+
+        if (!isNaN(netPriceElemVal)) {
             let selectedTaxId = $('#invoice-contents-field-tax-'+posuid).find('option:selected').val();
             let tax = $('#contents-tax-' + posuid + '-' + selectedTaxId).val();
 
-            let netPrice = financeDecimals.round(parseFloat(netPriceElemVal.replace(/[\,]+/, '.')));
+            let netPrice = financeDecimals.round(netPriceElemVal);
             let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1));
 
             grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
@@ -733,6 +744,7 @@
             netPriceElem.val(netPrice);
         } else {
             grossPriceElem.val('');
+            netPriceElem.val('');
         }
     }
 
