--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -635,10 +635,10 @@
 					let grossPrice = financeDecimals.round(grossPriceElemVal);
 					let netPrice = financeDecimals.round(grossPrice / (tax / 100 + 1));
 
-					netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+					netPrice = netPrice.toFixed(2).replace(/[\.]+/, ',');
 					netPriceElem.val(netPrice);
 
-					grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+					grossPrice = grossPrice.toFixed(2).replace(/[\.]+/, ',');
 					grossPriceElem.val(grossPrice);
 				} else {
 					netPriceElem.val('');
@@ -657,10 +657,10 @@
 					let netPrice = financeDecimals.round(netPriceElemVal);
 					let grossPrice = financeDecimals.round(netPrice * (tax / 100 + 1));
 
-					grossPrice = grossPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+					grossPrice = grossPrice.toFixed(2).replace(/[\.]+/, ',');
 					grossPriceElem.val(grossPrice);
 
-					netPrice = netPrice.toFixed(2).toString().replace(/[\.]+/, ',');
+					netPrice = netPrice.toFixed(2).replace(/[\.]+/, ',');
 					netPriceElem.val(netPrice);
 				} else {
 					grossPriceElem.val('');
