--- a/templates/default/customer/customertickets.html
+++ b/templates/default/customer/customertickets.html
@@ -129,18 +129,23 @@
 						</div>
 					</div>
 					<div class="lms-ui-tab-table-column buttons">
+					{buttons}
 						{if ($ticket.state != $smarty.const.RT_RESOLVED || ($ticket.state == $smarty.const.RT_RESOLVED && $aet && ($smarty.now - $ticket.resolvetime) < $aet)) || (ConfigHelper::checkPrivilege('superuser'))}
 							{button type="link" icon="message" href="?m=rtmessageadd&ticketid={$ticket.id}" tip="New Message"}
 						{/if}
 						{button type="link" icon="note" href="?m=rtnoteadd&ticketid={$ticket.id}" tip="New Note"}
 						{button type="link" icon="edit" href="?m=rtticketedit&id={$ticket.id}" tip="Edit"}
 						{button type='link' class="lms-ui-button-clipboard" icon="clipboard" clipboard="{$url}/?m=rtticketview&id={$ticket.id}" tip="Copy to clipboard"}
+						{if !empty($ticket.imagecount)}
+							{button type="link" icon="gallery" class="ticket-image-gallery" tip="Show ticket attached image gallery" data-ticket-id="{$ticket.id}"}
+						{/if}
 						{if $ticket.deleted == 1 && $ticket.deltime != 0 && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}
 							{button type="link" icon="reload" href="?m=rtrestore&id={$ticket.id}&taction=restore" tip="Restore<!RT>"}
 							{button type="link" icon="delete" href="?m=rtremove&id={$ticket.id}&taction=delperm" tip="Delete permanently"}
 						{else}
 							{button type="link" icon="delete" href="?m=rtticketdel&id={$ticket.id}&taction=delete" tip="Delete" class="delete-ticket"}
 						{/if}
+					{/buttons}
 					</div>
 				</div>
 			{foreachelse}
