improvement: make visual unification of tables (lost hover class, grey header color, remove h5) - bclean theme

--- a/userpanel/modules/helpdesk/style/bclean/templates/helpdesklist.html
+++ b/userpanel/modules/helpdesk/style/bclean/templates/helpdesklist.html
@@ -12,18 +12,11 @@
 	tr.table-click:hover {
 		cursor: pointer;
 	}
-	h5 {
-		margin-top: 10px;
-		margin-bottom: 10px;
-		font-weight: bold;
-	}
-</style>
-<h5>{trans("Request list:")}</h5>
 </style>
 
 <div class="table-responsive">
-	<table class="table table-bordered table-striped table-condensed">
-		<thead class="bg-primary lms-userpanel-table-header">
+	<table class="table table-bordered table-condensed table-striped table-hover">
+		<thead class="bg-secondary lms-userpanel-table-header">
 			<th>{trans("Number:")}</th>
 			<th>{trans("Subject:")}</th>
 		</thead>
