--- a/userpanel/modules/documents/style/bclean/templates/documents.html
+++ b/userpanel/modules/documents/style/bclean/templates/documents.html
@@ -18,6 +18,9 @@
 		margin-bottom: 0.6em;
 	}
 
+	tr.table-click:hover {
+		cursor: pointer;
+	}
 </style>
 
 {if $sms_active}
@@ -90,9 +93,9 @@
 {/if}
 
 <div class="table-responsive">
-	<table class="table table-sm table-hover table-bordered table-striped table-condensed">
+	<table class="table table-bordered table-condensed table-striped table-hover">
 		{if $documents}
-			<thead class="bg-secondary font-weight-bold lms-userpanel-table-header">
+			<thead class="bg-secondary lms-userpanel-table-header">
 				<th>{trans("Number:")}</th>
 				<th>{trans("Type:")}</th>
 				<th>{trans("Created:")}</th>
