--- a/userpanel/modules/notices/style/bclean/templates/notices.html
+++ b/userpanel/modules/notices/style/bclean/templates/notices.html
@@ -9,18 +9,25 @@
 	{/box}
 {/if}
 
+<style>
+	tr.table-click:hover {
+		cursor: pointer;
+	}
+</style>
+
 {box title="Notice to you"}
+
 {if $notice}
 	<div class="table-responsive">
-		<table class="table table-bordered table-condensed table-striped">
-			<tr class="bg-primary text-white">
+		<table class="table table-bordered table-condensed table-striped table-hover">
+			<thead class="bg-secondary lms-userpanel-table-header">
 				<th>{trans("Date")}</th>
 				<th>{trans("Type")}</th>
 				<th>{trans("Subject")}</th>
 				<th>{trans("Read")}</th>
-			</tr>
+			</thead>
 			{foreach $notice as $items}
-				<tr class="{if $items.status==$smarty.const.MSG_ERROR}text-danger{elseif $items.status==$smarty.const.MSG_SENT}text-muted{/if}" onCLick="ReadNotice('{$items.id}');">
+				<tr class="table-click {if $items.status==$smarty.const.MSG_ERROR}text-danger{elseif $items.status==$smarty.const.MSG_SENT}text-muted{/if}" onCLick="ReadNotice('{$items.id}');">
 					<td>{$items.cdate|date_format:"%Y/%m/%d %H:%M"}</td>
 					<td>{if $items.type == $smarty.const.MSG_USERPANEL_URGENT}<strong>{trans("Urgent")}</strong>{else}{trans("Casual")}{/if}</td>
 					<td>{$items.subject}</td>
@@ -34,6 +41,7 @@
 						{/if}
 					</td>
 				</tr>
+				<tr style="display:none;">
 				<tr id="{$items.id}" style="display:none;">
 					<td colspan="4" >
 						<h3>{trans("Body:")}</h3>
