--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -197,6 +197,9 @@
 		data-popup-menu-title="{t a=$doc.docid|string_format:"#%06d"}Document $a{/t}">
 		<TD class="nobr" onclick="window.open('?m=documentview&amp;id={$doc.docid}');"{if $doc.description} {tip text=$doc.description}{/if}>
 			{$doc.cdate|date_format:"%Y/%m/%d %H:%M"}{if $doc.sdate} / {$doc.sdate|date_format:"%Y/%m/%d %H:%M"}{/if}
+			{if $doc.closed == $smarty.const.DOC_OPEN && $doc.confirmdate}
+				{hint text=$doc.confirmdate|date_format:"%Y/%m/%d %H:%M" icon="wait"}
+			{/if}
 			{if $doc.number}<BR>
 				<B>{number number=$doc.number template=$doc.template time=$doc.cdate customerid=$doc.customerid}</B>
 			{/if}
