bugfix: make ui strings translatable

--- a/templates/default/tariff/tariffadd.html
+++ b/templates/default/tariff/tariffadd.html
@@ -263,7 +263,7 @@
 												{icon name="id"}
 											</td>
 											<td>
-												{trans("Product id:")}
+												{trans("Product ID:")}
 											</td>
 											<td>
 												<input type="text" size="8" name="tariff[prodid]" value="{$tariff.prodid}" {tip text="Enter Product id number (optional)" trigger="prodid"}>
