--- a/templates/default/tariff/tariffedit.html
+++ b/templates/default/tariff/tariffedit.html
@@ -290,7 +290,7 @@
                                                 {icon name="id"}
                                             </td>
                                             <td>
-                                                {trans("Product id:")}
+                                                {trans("Product ID:")}
                                             </td>
                                             <td>
                                                 <input type="text"
