bugfix: fix ignoring discount change in invoice correction - use strip

--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -425,10 +425,26 @@
 				<td class="text-right nobr">
 					{if $item.deleted}
 						<input type="hidden" name="discount[{$itemid}]"
-							value="{if $item.pdiscount != 0}{$item.pdiscount|string_format:"%.2f"}{else}{if $item.vdiscount != 0}{$item.vdiscount|string_format:"%.2f"}{/if}{/if}"
+							value="{strip}
+								{if $item.pdiscount != 0}
+									{$item.pdiscount|string_format:"%.2f"}
+								{else}
+									{if $item.vdiscount != 0}
+										{$item.vdiscount|string_format:"%.2f"}
+									{/if}
+								{/if}
+							{/strip}"
 						>
 						<input type="hidden" name="discount_type[{$itemid}]"
-							value="{if $item.pdiscount != 0}{$smarty.const.DISCOUNT_PERCENTAGE}{else}{if $item.vdiscount != 0}{$smarty.const.DISCOUNT_AMOUNT}{/if}{/if}"
+							value="{strip}
+								{if $item.pdiscount != 0}
+									{$smarty.const.DISCOUNT_PERCENTAGE}
+								{else}
+									{if $item.vdiscount != 0}
+										{$smarty.const.DISCOUNT_AMOUNT}
+									{/if}
+								{/if}
+							{/strip}"
 						>
 						{if $item.pdiscount != 0}
 							{$item.pdiscount|string_format:"%.2f%%"}
@@ -439,7 +455,15 @@
 						{/if}
 					{else}
 						<input type="text" name="discount[{$itemid}]"
-							value="{if $item.pdiscount != 0}{$item.pdiscount|string_format:"%.2f"}{else}{if $item.vdiscount != 0}{$item.vdiscount|string_format:"%.2f"}{/if}{/if}"
+							value="{strip}
+								{if $item.pdiscount != 0}
+									{$item.pdiscount|string_format:"%.2f"}
+								{else}
+									{if $item.vdiscount != 0}
+										{$item.vdiscount|string_format:"%.2f"}
+									{/if}
+								{/if}
+							{/strip}"
 							size="6" {tip text="Enter discount percentage or value"}
 						>
 						<br>
