bugfix: fixed typo

--- a/templates/default/promotion/promotionschemaadd.html
+++ b/templates/default/promotion/promotionschemaadd.html
@@ -84,7 +84,7 @@
 	<TR>
 		<TD class="lms-ui-box-buttons" colspan="3">
 			<div class="lms-ui-box-button-container">
-				{button type="submit" iocn="save" label="Submit"}
+				{button type="submit" icon="save" label="Submit"}
 				{button icon="cancel" label="Cancel" href="?m=promotioninfo&amp;id={$schema.promotionid}"}
 				<label>
 					<INPUT type="checkbox" name="schema[reuse]" value="ON"{if $schema.reuse} checked{/if}>
