--- a/templates/default/promotion/promotionschemainfobox.html
+++ b/templates/default/promotion/promotionschemainfobox.html
@@ -1,78 +1,94 @@
 <!-- $Id$ -->
-<TABLE class="lmsbox">
+<table class="lmsbox">
 	<colgroup>
 		<col style="width: 1%;">
 		<col style="width: 1%;">
 		<col style="width: 98%;">
 	</colgroup>
-	<THEAD>
-	<TR>
-		<TD>
-			{icon name="money"}
-		</TD>
-		<TD class="bold" colspan="2">
-			{$schema.name} ({$schema.id|string_format:"%04d"})
-			{if $schema.deleted} <span class="lms-ui-alert">({trans("deleted promotion schema")})</span>{/if}
-		</TD>
-	</TR>
-	</THEAD>
-	<TBODY>
-	<TR>
-		<TD>
-			{icon name="calendar"}
-		</TD>
-		<TD class="nobr" colspan="2">
-			{if $schema.data}{$schema.data}{else}{trans("unlimited")}{/if}
-		</TD>
-	</TR>
-	<TR>
-		<TD>
-			<A href="?m=promotionschemaset&id={$schema.id}&access={$schema.disabled}">
-				{if $schema.disabled}
-					{icon name="disconnected"}
-				{else}
-					{icon name="connected"}
+	<thead>
+		<tr>
+			<td>
+				{icon name="money"}
+			</td>
+			<td class="bold" colspan="2">
+				{$schema.name|escape} ({$schema.id|string_format:"%04d"})
+				{if $schema.deleted} <span class="lms-ui-alert">({trans("deleted promotion schema")})</span>{/if}
+			</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>
+				{icon name="calendar"}
+			</td>
+			<td class="nobr" colspan="2">
+				{if $schema.data}{$schema.data}{else}{trans("unlimited")}{/if}
+			</td>
+		</tr>
+		{if $schema.datefrom || $schema.dateto}
+			<tr>
+				<td>
+					{icon name="period"}
+				</td>
+				<td class="nobr" colspan="2">
+					{if $schema.datefrom}
+						{trans("from")} {$schema.datefrom|date_format:"%Y/%m/%d"}
+					{/if}
+					{if $schema.dateto}
+						{trans("to")} {$schema.dateto|date_format:"%Y/%m/%d"}
+					{/if}
+				</td>
+			</tr>
+		{/if}
+		<tr>
+			<td>
+				<A href="?m=promotionschemaset&id={$schema.id}&access={$schema.disabled}">
+					{if $schema.disabled}
+						{icon name="disconnected"}
+					{else}
+						{icon name="connected"}
+					{/if}
+				</A>
+			</td>
+			<td class="nobr" colspan="2">
+				{if $schema.disabled}{trans("disabled")}{else}{trans("enabled")}{/if}
+			</td>
+		</tr>
+		<tr>
+			<td>
+				{icon name="money"}
+			</td>
+			<td class="nobr" colspan="2">
+				<A href="?m=promotioninfo&id={$schema.pid}">{$schema.promotion}</A>
+			</td>
+		</tr>
+		{if $schema.description}
+		<tr>
+			<td>
+				{icon name="info"}
+			</td>
+			<td colspan="2">
+				<table width="100%" cellpadding="5">
+					<tr><td class="fall superlight">
+						{$schema.description|escape|replace:"\n":"<BR>"}
+					</td></tr>
+				</table>
+			</td>
+		</tr>
+		{/if}
+		<tr>
+			<td class="lms-ui-box-buttons" colspan="3">
+				{if !$schema.deleted}
+					{button icon="edit" label="Edit" href="?m=promotionschemaedit&id={$schema.id}"}
 				{/if}
-			</A>
-		</TD>
-		<TD class="nobr" colspan="2">
-			{if $schema.disabled}{trans("disabled")}{else}{trans("enabled")}{/if}
-		</TD>
-	</TR>
-	<TR>
-		<TD>
-			{icon name="money"}
-		</TD>
-		<TD class="nobr" colspan="2">
-			<A href="?m=promotioninfo&amp;id={$schema.pid}">{$schema.promotion}</A>
-		</TD>
-	</TR>
-	{if $schema.description}
-	<TR>
-		<TD>
-			{icon name="info"}
-		</TD>
-		<TD colspan="2">
-			<TABLE width="100%" cellpadding="5">
-				<TR><TD class="fall superlight">
-					{$schema.description|replace:"\n":"<BR>"}
-				</TD></TR>
-			</TABLE>
-		</TD>
-	</TR>
-	{/if}
-	<TR>
-		<TD class="lms-ui-box-buttons" colspan="3">
-			{if !$schema.deleted}
-				{button icon="edit" label="Edit" href="?m=promotionschemaedit&id={$schema.id}"}
-			{/if}
-			{if !$schema.deleted || !$schema.assignments}
-				{button icon="delete" label="Delete" id="delete-promotionschema" data_href="?m=promotionschemadel&id={$schema.id}"}
-			{/if}
-		</TD>
-	</TR>
-	</TBODY>
-</TABLE>
+				{if !$schema.deleted || !$schema.assignments}
+					{button icon="delete" label="Delete" id="delete-promotionschema" data_href="?m=promotionschemadel&id={$schema.id}"}
+				{/if}
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 <script>
 	$('#delete-promotionschema').click(function() {
 		confirmDialog($t("Are you sure, you want to delete this schema?"), this).done(function() {
