--- a/userpanel/modules/info/style/bclean/templates/userinfobox.html
+++ b/userpanel/modules/info/style/bclean/templates/userinfobox.html
@@ -23,7 +23,7 @@
 	</div>
 	<ul class="list-group list-group-flush">
 		<li class="list-group-item">
-			<strong>{if $userinfo.type == 0}{trans("Last and first name")}{else}{trans("Company name")}{/if}:</strong><BR />
+			<strong>{if $userinfo.type == 0}{trans("Last and first name")}{else}{trans("Company name")}{/if}:</strong><br>
 			{if isset($fields_changed.lastname) || isset($fields_changed.name)}
 			    <del>{$userinfo.customername}</del>&rarr;
 			    {if isset($fields_changed.lastname) && $fields_changed.lastname.fieldvalue != $userinfo.lastname}<mark>{$fields_changed.lastname.fieldvalue}</mark>{else}{$userinfo.lastname}{/if}
@@ -34,7 +34,7 @@
 		</li>
 		{if $userinfo.emails}
 			<li class="list-group-item">
-				<strong>{trans("E-mail:")}</strong><BR />
+				<strong>{trans("E-mail:")}</strong><br>
 				{foreach $userinfo.emails as $email}
 				    {$emailid='email'|cat:$email.id}
 				    {if isset($fields_changed[$emailid])}
@@ -47,7 +47,7 @@
 		</li>
 		{/if}
 		<li class="list-group-item">
-			<strong>{trans("Address:")}</strong><BR />
+			<strong>{trans("Address:")}</strong><br>
 			{if isset($fields_changed.street) || isset($fields_changed.building) || isset($fields_changed.apartment)}
 			    <del>{$userinfo.address}</del>&rarr;
 			    {if isset($fields_changed.street) && $fields_changed.street.fieldvalue != $userinfo.street}<mark>{$fields_changed.street.fieldvalue}</mark>{else}{$userinfo.street}{/if}
@@ -66,13 +66,13 @@
 		</li>
 		{if $userinfo.serviceaddr}
 			<li class="list-group-item">
-				<strong>{trans("Postal address:")}</strong><BR />
+				<strong>{trans("Postal address:")}</strong><br>
 				{$userinfo.serviceaddr}
 			</li>
 		{/if}
 		{if $userinfo.contacts}
 			<li class="list-group-item">
-				<strong>{trans("Phones:")}</strong><BR />
+				<strong>{trans("Phones:")}</strong><br>
 				{foreach $userinfo.contacts as $item}
 				    {$phoneid='phone'|cat:$item.id}
 				    {if isset($fields_changed[$phoneid])}
@@ -97,7 +97,7 @@
 					{elseif $item.type & $smarty.const.CONTACT_IM_FACEBOOK}
 						{trans("Facebook")}
 					{/if}
-				</strong><BR />
+				</strong><br>
 				{$item.uid}
 				{$imid='im'|cat:$item.id}
 				{if isset($fields_changed[$imid])}
@@ -135,13 +135,13 @@
 	</li>
 	{if $userinfo.bankaccount || $userinfo.accounts}
 		<li class="list-group-item">
-			<strong>{trans("Bank accounts:")}</strong><BR />
+			<strong>{trans("Bank accounts:")}</strong><br>
 			{if $userinfo.bankaccount}
 				{format_bankaccount($userinfo.bankaccount)|replace:" ":"&nbsp;"}
 			{/if}
-			{if $userinfo.accounts}<BR />{/if}
+			{if $userinfo.accounts}<br>{/if}
 			{foreach $userinfo.accounts as $account}
-				{format_bankaccount($account.account)|replace:" ":"&nbsp;"}{if !$account@last}<BR />{/if}
+				{format_bankaccount($account.account)|replace:" ":"&nbsp;"}{if !$account@last}<br>{/if}
 			{/foreach}
 
 		</li>
@@ -178,7 +178,7 @@
 							</div>
 						{/if}
 					{else}
-						<strong>{trans("Name:")}</strong><br/>{$userinfo.customername} ({$userinfo.id|string_format:"%04d"})
+						<strong>{trans("Name:")}</strong><br>{$userinfo.customername} ({$userinfo.id|string_format:"%04d"})
 					{/if}
 
 					{if $rights.info.edit_addr || $rights.info.edit_addr_ack}
@@ -202,9 +202,9 @@
 							<INPUT class="col-5 form-control" id="city" TYPE="TEXT" NAME="userdata[city]" VALUE="{$userinfo.city}" placeholder="{trans("Enter city name")}">
 						</div>
 					{else}
-						{$userinfo.address},<br/> {$userinfo.zip} {$userinfo.city}
+						{$userinfo.address},<br> {$userinfo.zip} {$userinfo.city}
 					{/if}
-					<br/><br/>
+					<br><br>
 					{if $rights.info.edit_contact || $rights.info.edit_contact_ack}
 
 						{foreach $userinfo.emails as $email}
@@ -221,7 +221,7 @@
 					{else}
 						<strong>{trans("E-mail:")}</strong>
 						{foreach $userinfo.emails as $email}
-							{$email.email}{if !$email@last}<BR />{/if}
+							{$email.email}{if !$email@last}<br>{/if}
 						{/foreach}
 					{/if}
 
@@ -239,7 +239,7 @@
 						{/foreach}
 					{else}
 						{foreach $userinfo.contacts as $item}
-							{if $item.phone}{$item.phone}<br />{/if}
+							{if $item.phone}{$item.phone}<br>{/if}
 						{/foreach}
 					{/if}
 
