bugfix: removed reduntant quote character

--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -73,7 +73,7 @@
 				<br>
 				<span class='blend'><strong>{trans("Expired assignment")}</strong></span>
 				<br>
-				<span class='lms-ui-assignment-not-commited'><strong>{trans("Assignment from not approved document")}</strong></span>"
+				<span class='lms-ui-assignment-not-commited'><strong>{trans("Assignment from not approved document")}</strong></span>
 			{/capture}
 			{hint text=$assignment_hint}
 		{/tab_header_cell}
