bugfix: visual fix

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -459,9 +459,9 @@
 			<INPUT class="radio light" type="radio" id="operator1" value="OR" name="k"{if $k=='OR'} CHECKED{/if}><label for="operator1">{trans("or")}</label>
 		</TD>
 	</TR>
-	<TR>
-		<TD class="flr" colspan="2">&nbsp;</TD>
-	</TR>
+	<tr>
+		<td colspan="2">&nbsp;</td>
+	</tr>
 	<TR>
 		<TD class="bold nobr">
 			{icon name="division"} {trans("Division")}:
